; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_item.c_input_item_GetNowPlayingFb.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_item.c_input_item_GetNowPlayingFb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vlc_meta_NowPlaying = common dso_local global i32 0, align 4
@vlc_meta_ESNowPlaying = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @input_item_GetNowPlayingFb(i32* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @vlc_meta_NowPlaying, align 4
  %7 = call i8* @input_item_GetMeta(i32* %5, i32 %6)
  store i8* %7, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load i8*, i8** %4, align 8
  %12 = call i64 @strlen(i8* %11)
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %10, %1
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @free(i8* %15)
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* @vlc_meta_ESNowPlaying, align 4
  %19 = call i8* @input_item_GetMeta(i32* %17, i32 %18)
  store i8* %19, i8** %2, align 8
  br label %22

20:                                               ; preds = %10
  %21 = load i8*, i8** %4, align 8
  store i8* %21, i8** %2, align 8
  br label %22

22:                                               ; preds = %20, %14
  %23 = load i8*, i8** %2, align 8
  ret i8* %23
}

declare dso_local i8* @input_item_GetMeta(i32*, i32) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
